--- a/template/req.html
+++ b/template/req.html
@@ -27,7 +27,7 @@
 <body>
     <nav>
         <div class="nleft">
-            <a href="https://t.me/TheMovieProviderBot">
+            <a href="https://t.me/SHProSearchbot">
                 <!-- if u are trying to change the header name please remove the title text from bottom line  -->
                 <h4 id="heading" style="z-index: 100;" class="magnet">MOVIE PROVIDER</h4>
             </a>
@@ -99,23 +99,23 @@
                         <div class="abt-sec" id="sec2">
                             <h1>OUR ALL <span>CHANNELS</span> LIST</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/HP_MOVIES_WORLD"><button>HP MOVIES 
-                                        WORLD</button></a>
-                                <a class="magnet" href="https://t.me/MoviesLinkSearchBot2"><button>MOVIE SEARCH 
-                                        BOT²</button></a>
-                                <a class="magnet" href="https://t.me/MoviesLinkSearchBot3"><button>MOVIE SEARCH 
-                                        BOT³</button></a>
-                                <a class="magnet" href="https://t.me/HpMovieReqest"><button>MOVIE REQUEST 
-                                        GROUP</button></a>
-                                <a class="magnet" href="https://t.me/+_mQHFKrbsiQyOTQ1"><button>HP REQUEST 
-                                        LOGS</button></a>
+                                <a class="magnet" href="https://t.me/SHProSearchbot"><button>SHProSearchbot
+                                        </button></a>
+                                <a class="magnet" href="https://t.me/SH_OTT"><button>CHANNEL
+                                        2</button></a>
+                                <a class="magnet" href="https://t.me/SH_MOVIEZ"><button>CHANNEL
+                                        3</button></a>
+                                <a class="magnet" href="https://t.me/SH_Telugu_Movies"><button>CHANNEL
+                                        4</button></a>
+                                <a class="magnet" href="https://t.me/Filter5_bot"><button>SUPPORT 
+                                        BOT</button></a>
                             </div>
                         </div>
                         <div class="abt-sec" id="sec3">
-                            <h1>OUR ALL <span>BOTS</span> LIST</h1>
+                            <h1>OUR BOT <span>CHANNEL</span> LIST</h1>
                             <div class="links bot-link">
-                                <a class="magnet" href="https://t.me/TheMovieProviderBot"><button>THE MOVIE
-                                        PROVIDER</button></a>
+                                <a class="magnet" href="https://t.me/SH_OTT"><button>MAIN
+                                        CHANNEL</button></a>
                             </div>
                         </div>
                         <div class="abt-sec" id="sec4">
@@ -125,7 +125,7 @@
                             <p style="text-align: center;">YOU CAN <Span>TALK</Span> WITH US FOR YOUR <Span>SUPPORT</Span> AND YOU CAN <Span>REPORT</Span> THROUGH
                                 TELEGRAM</p>
                             <div class="links contact">
-                                <a href="https://t.me/HpRequestBot"><button>CONTACT US</button></a>
+                                <a href="https://t.me/Filter5_bot"><button>CONTACT US</button></a>
                             </div>
                         </div>
                     </div>
@@ -156,15 +156,15 @@
 
 
             <div class="copyright ">
-                <h5 class="text-center">Copyright © 2023 <a href="https://t.me/DeletedFromEarth"><span
-                            style="font-weight: 700;">HP</span></a>. All
+                <h5 class="text-center">Copyright © 2023 <a href="https://t.me/Filter5_bot"><span
+                            style="font-weight: 700;">SH</span></a>. All
                     Rights Reserved.</h5>
                 <div class="icons">
-                    <a href="https://github.com/HarshalPurohitEdits"><i class="fa-brands fa-github fa-lg"></i></a>
-                    <a href="https://t.me/bisal_Files"><i class="fa-brands fa-telegram fa-lg"></i></a>
+                    <a href="https://github.com"><i class="fa-brands fa-github fa-lg"></i></a>
+                    <a href="https://t.me/SHProSearchbot"><i class="fa-brands fa-telegram fa-lg"></i></a>
                 </div>
-                <h4 style="font-weight: 700;">This Page Is Designed By <a
-                        href="https://t.me/DeletedFromEarth"><span>HP</span></a></h4>
+                <h4 style="font-weight: 700;">This Page Is Designed <a
+                        href="https://t.me/SH_OTT"><span>FOR YOU</span></a></h4>
             </div>
         </footer>
 </body>
