--- a/template/dl.html
+++ b/template/dl.html
@@ -163,7 +163,7 @@
                     <a href="https://github.com"><i class="fa-brands fa-github fa-lg"></i></a>
                     <a href="https://t.me/SH_OTT"><i class="fa-brands fa-telegram fa-lg"></i></a>
                 </div>
-                <h4 style="font-weight: 700;">This Page Is Designed By <a
+                <h4 style="font-weight: 700;">This Page Is Designed <a
                         href="https://t.me"><span>For You</span></a></h4>
             </div>
         </footer>
