--- a/template/req.html
+++ b/template/req.html
@@ -29,7 +29,7 @@
         <div class="nleft">
             <a href="https://t.me/SHProSearchbot">
                 <!-- if u are trying to change the header name please remove the title text from bottom line  -->
-                <h4 id="heading" style="z-index: 100;" class="magnet">MOVIE PROVIDER</h4>
+                <h4 id="heading" style="z-index: 100;" class="magnet">SH_OTT</h4>
             </a>
         </div>
         <div class="nryt">
